cabal-version:      2.4
name:               starter
version:            0.1.0.0
synopsis:           Starter
bug-reports:        https://github.com/mkungla/exp-plutus/issues
license:            MIT
copyright:          © 2021 Marko Kungla
author:             Marko Kungla
maintainer:         marko.kungla@gmail.com
build-type:         Simple

category: experiments
extra-source-files:
  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Main
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
